Fix spacing issues for notes header

--- a/frontend/src/components/NoteFormModal/NoteForm.css
+++ b/frontend/src/components/NoteFormModal/NoteForm.css
@@ -74,9 +74,7 @@
 }
 
 .notes__button {
-  margin: 40px 50px 10px 0;
   font-size: 16px;
   border: none;
-  padding: 10px;
   background-color: transparent;
 }
